# garden-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  gardenRetheming.md  pyproject.toml  spec-driven.md
.gardify/templates/: agent-file-template.md  checklist-template.md  monthly-care-template.md  plan-template.md  planting-schema-template.md  quickstart-template.md  spec-template.md  tasks-template.md  tools-template.md
.gardify/templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh  generate-release-notes.sh
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md
memory/: constitution.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
specs/000-sample-garden/: existing-plant-inventory.md  monthly-care-plan.md  plan.md  planting-schema.md  quickstart.md  seasonal-calendar.md  site-research.md  spec.md  tasks.md  tools.md
src/specify_cli/: __init__.py
templates/: checklist-template.md  existing-plant-inventory-template.md  plan-template.md  seasonal-calendar-template.md  site-research-template.md  tasks-template.md  vscode-settings.json
templates/commands/: analyze.md  checklist.md  clarify.md  implement.md  plan.md  specify.md  tasks.md
(+20 files in other folders)
